--- a/index.html
+++ b/index.html
@@ -363,14 +363,14 @@
         </div>
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/work-3.jpg" data-lightbox="gallery-mf">
+            <a href="https://ajaymadhavan14.github.io/Mcdonald-s-clone/" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/work-3.jpg" alt="" class="img-fluid">
+                <img style="height: 15.5em ; width: 18rem;" src="img/MC.png" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Apple India</h2>
+                    <h2 class="w-title">Mcdonald's India</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">05 Sep. 2022</span>
                     </div>
