--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="img/ajay.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="img/ajay.webp" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-7">
@@ -526,10 +526,10 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://www.facebook.com/ajaykrishna.ajayaju"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href="https://www.instagram.com/invites/contact/?i=1gn6drodzjdao&utm_content=wndp0c"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://www.facebook.com/ajaykrishna.ajayaju"target="_blank"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/invites/contact/?i=1gn6drodzjdao&utm_content=wndp0c"target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
                       <li><a href=" "><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://github.com/ajaymadhavan14"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://github.com/ajaymadhavan14"target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
 
                     </ul>
                   </div>
