--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     <ul>
                       <li><a href="https://www.facebook.com/ajaykrishna.ajayaju"target="_blank"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
                       <li><a href="https://www.instagram.com/invites/contact/?i=1gn6drodzjdao&utm_content=wndp0c"target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href=" "><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/ajaykrishna-m-599a93264/" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
                       <li><a href="https://github.com/ajaymadhavan14"target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
 
                     </ul>
