--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     <div class="about-info">
                       <p><span class="title-s">Name: </span> <span>AJAYKRISHNA M</span></p>
                       <p><span class="title-s">Profile: </span> <span>MERN stack developer</span></p>
-                      <p><span class="title-s">Email: </span> <span>ajay141297@gmail.com</span></p>
-                      <p><span class="title-s">Phone: </span> <span>+91 8137821929</span></p>
+                      <p><span class="title-s">Email: </span> <span>ajaykrishna14online@gmail.com</span></p>
+                      <p><span class="title-s">Phone: </span> <span>+91 8848588608</span></p>
                     </div>
                   </div>
                 </div>
