--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Ajay Krishna Portfolio</title>
@@ -9,7 +10,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
- 
+
 
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +73,8 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am AJAYKRISHNA M</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Web Developer,Web Designer,Frontend Developer,Backend Devoloper,Graphic Designer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Web Developer,Web Designer,Frontend
+              Developer,Backend Devoloper,Graphic Designer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -104,7 +106,7 @@
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skill</p>
-                 
+
                   <span>JAVASCRIPT</span> <span class="pull-right">80%</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
@@ -122,8 +124,8 @@
                   </div>
                   <span>Mongo DB</span> <span class="pull-right">70%</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0"
-                      aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
+                      aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   <span>HTML & CSS</span> <span class="pull-right">75%</span>
                   <div class="progress">
@@ -140,18 +142,21 @@
                     </h5>
                   </div>
                   <p class="lead">
-                    Hi , I am innovative and taskdriven professional in web design and development across diverse 
-                    industries. Proficient in devoloping databases, creating user interface,writing and testing 
+                    Hi , I am innovative and taskdriven professional in web design and development across diverse
+                    industries. Proficient in devoloping databases, creating user interface,writing and testing
                     codes, troubleshooting simple/complex issues and implementing new features based on user feedback.
                   </p>
                   <p class="lead">
-                    Creative web developer dedicated to developing and optimizing interactive , user-interface, and 
-                    feature-rich websites. Leverage analytical skills and stronng  attention to detail in order to deliver
-                    original and efficient web solutions, provide technical knowledge and expertise, build new websites from the 
+                    Creative web developer dedicated to developing and optimizing interactive , user-interface, and
+                    feature-rich websites. Leverage analytical skills and stronng attention to detail in order to
+                    deliver
+                    original and efficient web solutions, provide technical knowledge and expertise, build new websites
+                    from the
                     start to finish.
                   </p>
                   <p class="lead">
-                    Got the full skill and training with the help of BROTOTYPE. They made me as a web-developer from the scratch.
+                    Got the full skill and training with the help of BROTOTYPE. They made me as a web-developer from the
+                    scratch.
                   </p>
                 </div>
               </div>
@@ -215,7 +220,7 @@
             <div class="service-content">
               <h2 class="s-title">Photography</h2>
               <p class="s-description text-center">
-                I am a creative developer based in Kerala, India - who work as a team and individually, 
+                I am a creative developer based in Kerala, India - who work as a team and individually,
                 across a range of creative disciplines in photography.
               </p>
             </div>
@@ -229,8 +234,8 @@
             <div class="service-content">
               <h2 class="s-title">Responsive Design</h2>
               <p class="s-description text-center">
-                It is the approach that suggests that design and development 
-                should respond to the user’s behavior and environment based on screen size, platform 
+                It is the approach that suggests that design and development
+                should respond to the user’s behavior and environment based on screen size, platform
                 and orientation.
               </p>
             </div>
@@ -244,8 +249,8 @@
             <div class="service-content">
               <h2 class="s-title">Graphic Design</h2>
               <p class="s-description text-center">
-                Highly creative Graphic Designer with extensive experience 
-                in multimedia, marketing, and print design. Make more <br> attractive and eye-catching designs. 
+                Highly creative Graphic Designer with extensive experience
+                in multimedia, marketing, and print design. Make more <br> attractive and eye-catching designs.
               </p>
             </div>
           </div>
@@ -317,7 +322,7 @@
               Projects
             </h3>
             <p class="subtitle-a">
-              These are the some projects  i have worked on
+              These are the some projects i have worked on
             </p>
             <div class="line-mf"></div>
           </div>
@@ -409,7 +414,7 @@
         <div class="col-sm-12">
           <div class="title-box text-center">
             <h3 class="title-a" id="qualifi">
-             Qualification
+              Qualification
             </h3>
             <p class="subtitle-a">
               Current Qualifications
@@ -429,7 +434,8 @@
               </div>
               <h3 class="card-title"><a href="blog-single.html">BROTOTYPE</a></h3>
               <p class="card-description">
-                Started the Web development course in Brototype, Calicut in august 2022. Pursuing the web develepment course and developing the skills . 
+                Started the Web development course in Brototype, Calicut in august 2022. Pursuing the web develepment
+                course and developing the skills .
               </p>
             </div>
           </div>
@@ -437,7 +443,8 @@
         <div class="col-md-4">
           <div class="card card-blog">
             <div class="card-img">
-            <a href="blog-single.html"><img style="height:280px ;"  src="img/snes 11.jfif" alt="" class="img-fluid"></a>
+              <a href="blog-single.html"><img style="height:280px ;" src="img/snes 11.jfif" alt=""
+                  class="img-fluid"></a>
             </div>
             <div class="card-body">
               <div class="card-category-box">
@@ -457,14 +464,14 @@
             <div class="card-body">
               <div class="card-category-box">
               </div>
-              <h3 class="card-title"><a href="blog-single.html">Nanminda  Higher Secondary School (HSS),Nanminda</a></h3>
+              <h3 class="card-title"><a href="blog-single.html">Nanminda Higher Secondary School (HSS),Nanminda</a></h3>
               <p class="card-description">
                 Completed the Higher secondary in science stream
               </p>
             </div>
+          </div>
         </div>
       </div>
-    </div>
   </section>
   <!--/ Section Blog End /-->
 
@@ -484,31 +491,35 @@
                     </h5>
                   </div>
                   <div>
-                      <form id="submit-form" >
+                    <form id="submit-form">
                       <div id="sendmessage">Your message has been sent. Thank you!</div>
-                    <!--  <div id="errormessage"></div> -->
-                       <div class="row">
+                      <!--  <div id="errormessage"></div> -->
+                      <div class="row">
                         <div class="col-md-12 mb-3">
                           <div class="form-group">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
+                              data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                             <div class="validation"></div>
                           </div>
                         </div>
                         <div class="col-md-12 mb-3">
                           <div class="form-group">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
+                              data-rule="email" data-msg="Please enter a valid email" />
                             <div class="validation"></div>
                           </div>
                         </div>
                         <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                              <div class="validation"></div>
-                            </div>
+                          <div class="form-group">
+                            <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
+                              data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                            <div class="validation"></div>
+                          </div>
                         </div>
                         <div class="col-md-12 mb-3">
                           <div class="form-group">
-                            <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                            <textarea class="form-control" name="message" rows="5" data-rule="required"
+                              data-msg="Please write something for us" placeholder="Message"></textarea>
                             <div class="validation"></div>
                           </div>
                         </div>
@@ -527,7 +538,7 @@
                   </div>
                   <div class="more-info">
                     <p class="lead">
-                      
+
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Madhavam (h),Eravannur ,Kozhikode pin-673585</li>
@@ -537,10 +548,14 @@
                   </div>
                   <div class="socials">
                     <ul>
-                      <li><a href="https://www.facebook.com/ajaykrishna.ajayaju" target="_blank"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
-                      <li><a href="https://www.instagram.com/invites/contact/?i=1gn6drodzjdao&utm_content=wndp0c"target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
-                      <li><a href="https://www.linkedin.com/in/ajaykrishna-m-599a93264" target="_blank"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
-                      <li><a href="https://github.com/ajaymadhavan14"target="_blank"><span class="ico-circle"><i class="ion-social-github"></i></span></a></li>
+                      <li><a href="https://www.facebook.com/ajaykrishna.ajayaju" target="_blank"><span
+                            class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
+                      <li><a href="https://www.instagram.com/invites/contact/?i=1gn6drodzjdao&utm_content=wndp0c"
+                          target="_blank"><span class="ico-circle"><i class="ion-social-instagram"></i></span></a></li>
+                      <li><a href="https://www.linkedin.com/in/ajaykrishna-m-599a93264" target="_blank"><span
+                            class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                      <li><a href="https://github.com/ajaymadhavan14" target="_blank"><span class="ico-circle"><i
+                              class="ion-social-github"></i></span></a></li>
 
                     </ul>
                   </div>
@@ -589,24 +604,25 @@
   <script src="js/main.js"></script>
 
   <script>
-    $("#submit-form").submit((e)=>{
-        e.preventDefault()
-        $.ajax({
-            url:"https://script.google.com/macros/s/AKfycbxII_3TElVHUPkFtrp__6hGTwjdX9FeUp6-X2e9WGATDvRPEpzc3VFyr0lwaFkbBISKHA/exec",
-            data:$("#submit-form").serialize(),
-            method:"post",
-            success:function (response){
-                alert("Form submitted successfully")
-                window.location.reload()
-                //window.location.href="https://google.com"
-            },
-            error:function (err){
-                alert("Something Error")
+    $("#submit-form").submit((e) => {
+      e.preventDefault()
+      $.ajax({
+        url: "https://script.google.com/macros/s/AKfycbxII_3TElVHUPkFtrp__6hGTwjdX9FeUp6-X2e9WGATDvRPEpzc3VFyr0lwaFkbBISKHA/exec",
+        data: $("#submit-form").serialize(),
+        method: "post",
+        success: function (response) {
+          alert("Form submitted successfully")
+          window.location.reload()
+          //window.location.href="https://google.com"
+        },
+        error: function (err) {
+          alert("Something Error")
 
-            }
-        })
+        }
+      })
     })
-</script>
+  </script>
 
 </body>
+
 </html>
