--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
                     </p>
                     <ul class="list-ico">
                       <li><span class="ion-ios-location"></span> Madhavam (h),Eravannur ,Kozhikode pin-673585</li>
-                      <li><span class="ion-ios-telephone"></span> +91 8137821929</li>
-                      <li><span class="ion-email"></span> ajay141297@gmail.com</li>
+                      <li><span class="ion-ios-telephone"></span> +91 8848588608</li>
+                      <li><span class="ion-email"></span> ajaykrishna14online@gmail.com</li>
                     </ul>
                   </div>
                   <div class="socials">
